# serializer version: 1
# name: test_find
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited Prunus virus E',
        'id': '6116cba1.1',
        'index': dict({
          'id': 'unbuilt',
          'version': 1,
        }),
        'method_name': 'edit',
        'otu': dict({
          'id': '6116cba1',
          'name': 'Prunus virus F',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'hxn167',
          'name': 'Reference A',
        }),
        'user': dict({
          'administrator': False,
          'handle': 'bob',
          'id': 'bf1b993c',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited Prunus virus E',
        'id': 'foobar.1',
        'index': dict({
          'id': 'unbuilt',
          'version': 1,
        }),
        'method_name': 'edit',
        'otu': dict({
          'id': '6116cba1',
          'name': 'Prunus virus F',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'hxn167',
          'name': 'Reference A',
        }),
        'user': dict({
          'administrator': False,
          'handle': 'bob',
          'id': 'bf1b993c',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited Prunus virus E',
        'id': 'foobar.2',
        'index': dict({
          'id': 'unbuilt',
          'version': 1,
        }),
        'method_name': 'edit',
        'otu': dict({
          'id': '6116cba1',
          'name': 'Prunus virus F',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'hxn167',
          'name': 'Reference A',
        }),
        'user': dict({
          'administrator': False,
          'handle': 'bob',
          'id': 'bf1b993c',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_get[None]
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'description': 'Edited Prunus virus E',
    'diff': list([
      list([
        'change',
        'abbreviation',
        list([
          'PVF',
          '',
        ]),
      ]),
      list([
        'change',
        'name',
        list([
          'Prunus virus F',
          'Prunus virus E',
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
    ]),
    'id': '6116cba1.1',
    'index': dict({
      'id': 'unbuilt',
      'version': 1,
    }),
    'method_name': 'edit',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'user': dict({
      'administrator': False,
      'handle': 'bob',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_revert[True-False-None]
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_revert[True-False-None].1
  list([
    dict({
      '_id': '6116cba1.0',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 495000),
      'description': 'Description',
      'diff': dict({
        '_id': '6116cba1',
        'abbreviation': 'PVF',
        'imported': True,
        'isolates': list([
          dict({
            'default': True,
            'id': 'cab8b360',
            'sequences': list([
              dict({
                '_id': 'KX269872',
                'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
                'host': 'sweet cherry',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'segment': None,
                'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
              }),
            ]),
            'source_name': '8816-v2',
            'source_type': 'isolate',
          }),
        ]),
        'last_indexed_version': 0,
        'lower_name': 'prunus virus f',
        'name': 'Prunus virus F',
        'reference': dict({
          'id': 'hxn167',
        }),
        'schema': list([
        ]),
        'verified': False,
        'version': 0,
      }),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'create',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 0,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'test',
      }),
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 600000),
      'description': 'Description',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'change',
          'abbreviation',
          list([
            'PVF',
            'TST',
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'update',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'test',
      }),
    }),
  ])
# ---
# name: test_revert[True-False-None].2
  list([
    dict({
      '_id': 'KX269872',
      'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
      'host': 'sweet cherry',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'segment': None,
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    }),
  ])
# ---
# name: test_revert[True-True-None]
  dict({
    '_id': '6116cba1',
    'abbreviation': 'TST',
    'imported': True,
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_revert[True-True-None].1
  list([
    dict({
      '_id': '6116cba1.0',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 495000),
      'description': 'Description',
      'diff': dict({
        '_id': '6116cba1',
        'abbreviation': 'PVF',
        'imported': True,
        'isolates': list([
          dict({
            'default': True,
            'id': 'cab8b360',
            'sequences': list([
              dict({
                '_id': 'KX269872',
                'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
                'host': 'sweet cherry',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'segment': None,
                'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
              }),
            ]),
            'source_name': '8816-v2',
            'source_type': 'isolate',
          }),
        ]),
        'last_indexed_version': 0,
        'lower_name': 'prunus virus f',
        'name': 'Prunus virus F',
        'reference': dict({
          'id': 'hxn167',
        }),
        'schema': list([
        ]),
        'verified': False,
        'version': 0,
      }),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'create',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 0,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'test',
      }),
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2017, 7, 12, 16, 0, 50, 600000),
      'description': 'Description',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'change',
          'abbreviation',
          list([
            'PVF',
            'TST',
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'update',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'test',
      }),
    }),
  ])
# ---
# name: test_revert[True-True-None].2
  list([
    dict({
      '_id': 'KX269872',
      'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
      'host': 'sweet cherry',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'segment': None,
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    }),
  ])
# ---
